--- a/app/src/main/res/layout/activity_layout.xml
+++ b/app/src/main/res/layout/activity_layout.xml
@@ -9,16 +9,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.01"
             android:layout_margin="15dp"
-
-            android:orientation="vertical"
-            android:weightSum="1">
-            <ImageView
+            android:orientation="vertical">
+            <VideoView
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:layout_marginBottom="5dp"
-                android:background="@drawable/video_icon" />
+                android:layout_marginBottom="5dp" />
             <TextView
                 android:id="@+id/txActivityName"
                 android:layout_width="match_parent"
