Mobile Application Project Fitness Update

--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
+    android:background="#fff"
     android:scrollbarAlwaysDrawVerticalTrack="true">
 
     <ImageButton
@@ -37,6 +38,7 @@
             android:orientation="vertical"
             android:paddingTop="30dp"
             android:gravity="center">
+
 
 
 
