--- a/app/src/main/res/layout/stud_dailyact.xml
+++ b/app/src/main/res/layout/stud_dailyact.xml
@@ -13,13 +13,17 @@
     android:layout_marginRight="5dp"
     >
 
-    <TextView
-        android:id="@+id/section_label"
-        android:layout_width="wrap_content"
+    <ListView
+        android:id="@+id/exerciselist"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="STUDENT DAILY ACTIVITY"
-        android:textSize="40dp" />
+        android:layout_marginBottom="64dp"
+        android:background="#fff"
+        android:clickable="true"
+        android:divider="#E3ff"
+        android:dividerHeight="1dp">
+
+    </ListView>
 
 
 
